--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -61,30 +61,32 @@ client = Pexels::Client.new('563492ad6f917000010000014e7da287474c41f586d037fa8c6
     <div class="field">
       <%= f.text_field :reglas, class: "input is-primary is-rounded is-outlined", placeholder:"Agrega alguna regla para tu auto" %>
     </div>
-    <!-- La idea es que despues se guarde en el usario @foto, para que en cada pagina se agreguen las lineas 72 a la 74
-
-    Falta hacer un try cuando la foto no exista y que se vuelva a cargar -->
-
-    <div>
-      <%
-      @valor = "True"
+  
+    <%
+      @valor = true
       @vuelta = 0
-      while @valor == "True"
-        begin
-          @numero = rand(9999999)
-          @photo = client.photos.find(@numero)
-        rescue => exception
-        else 
-          @valor = "False"
-        ensure
-          @vuelta = @vuelta + 1
+      @imagenes = []
+      while @imagenes.length < 9
+        @valor = true
+        while @valor 
+          begin
+            @numero = rand(9999999)
+            @photo = client.photos.find(@numero)
+          rescue => exception
+          else 
+            @valor = false
+          ensure
+            @vuelta = @vuelta + 1
+          end
+        end
+        @link_foto = @photo.src["original"]
+        if not @link_foto.in? @imagenes
+          @imagenes << @link_foto
         end
       end
-      @link_foto = @photo.src["original"]
-      %>
-    </div>
+    %>
 
-    <%= f.hidden_field :foto, value: @link_foto%>
+    <%= f.hidden_field :foto, value: @link_foto %>
     
     <br/>
     <div class="actions">
