--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -21,7 +21,7 @@
 
         <div class="navbar-dropdown is-center is-boxed">
           <div class="dropdown-content">
-              <a>
+              <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
                 <ion-icon size="large" name="car-sport"></ion-icon>
               </a>
               <% 
@@ -31,13 +31,16 @@
                   @usuario = 0
                 end 
               %>
-              <div align="center"  class="title is-5 has-text-black is-active"><%= link_to "Cuenta", users_show_path(:id => @usuario, :tipo_lista => 0) %></div>
-              <div align="center"  class="title is-5 has-text-black is-active"><%= link_to "Turnos Conductor", turnos_index_path(:tipo => 2, :tipo_lista => 0) %></div>
-              <div align="center"  class="title is-5 has-text-black is-active"><%= link_to "Turnos Pasajero", turnos_index_path(:tipo => 1, :tipo_lista => 0)%>
-              </div>
-              <div align="center"  class="title is-5 has-text-black is-active"><%= link_to "Solicitudes Recibidas", requests_index_path(:tipo => 1, :tipo_lista => 0) %></div>
-              <div align="center"  class="title is-5 has-text-black is-active"><%= link_to "Solicitudes Enviadas", requests_index_path(:tipo => 2, :tipo_lista => 0) %></div>
-              <div align="center"  class="title is-5 has-text-black is-active"><%= link_to "Mensajes", mensajes_path(id_turno: 0) %></div>
+              <% if current_user %>
+                <div align="center"  class="title is-5 has-text-black is-active"><%= link_to "Cuenta", users_show_path(:id => @usuario, :tipo_lista => 0) %></div>
+                <div align="center"  class="title is-5 has-text-black is-active"><%= link_to "Turnos Conductor", turnos_index_path(:tipo => 2, :tipo_lista => 0) %></div>
+              <% end %>
+              <div align="center"  class="title is-5 has-text-black is-active"><%= link_to "Turnos Pasajero", turnos_index_path(:tipo => 1, :tipo_lista => 0)%></div>
+              <% if current_user %>
+                <div align="center"  class="title is-5 has-text-black is-active"><%= link_to "Solicitudes Recibidas", requests_index_path(:tipo => 1, :tipo_lista => 0) %></div>
+                <div align="center"  class="title is-5 has-text-black is-active"><%= link_to "Solicitudes Enviadas", requests_index_path(:tipo => 2, :tipo_lista => 0) %></div>
+              <% end %>
+              <div align="center"  class="title is-5 has-text-black is-active"><%= link_to "Chats turnos", mensajes_path(id_turno: 0) %></div>
               <div align="center"  class="title is-5 has-text-black is-active"><%= link_to "Ayuda", ayuda_path %></div>
             <hr class="dropdown-divider">
               <% if current_user %>
