Arreglo en usuario anonimo

--- a/app/views/turnos/show.html.erb
+++ b/app/views/turnos/show.html.erb
@@ -1,13 +1,25 @@
 <div align='center'>
     <h1 class="title is-2 has-text-primary">Turno</h1>
 
+    <% 
+        if current_user
+            @usuario = current_user.id
+        else 
+            @usuario = 0
+        end 
+    %>
+
     <p>
         <strong>Número Turno: </strong>
         <%= @turno.id %>
     </p>
     <p>
         <strong>Nombre conductor: </strong>
-        <%= link_to users_show_path(:id => @turno.user_id) do %>
+        <%  if @usuario != 0 %>
+            <%= link_to users_show_path(:id => @turno.user_id) do %>
+                <%= User.find(@turno.user_id).name %>
+            <% end %>
+        <% else %>
             <%= User.find(@turno.user_id).name %>
         <% end %>
     </p>
@@ -39,14 +51,6 @@
         <strong>Estado: </strong>
         <%= @turno.estado %>
     </p>
-
-    <% 
-        if current_user
-            @usuario = current_user.id
-        else 
-            @usuario = 0
-        end 
-    %>
 
     <% if @turno.user_id == @usuario %>
         <%= button_to "Volver",  turnos_index_path(:tipo => 2, :tipo_lista => 0), :id => "boton_volver", :class => "button is-primary is-inverted is-rounded is-outlined", method: :get%>
