Crud reportes listo

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -42,6 +42,9 @@
               <% end %>
               <div align="center"  class="title is-5 has-text-black is-active"><%= link_to "Chats turnos", mensajes_path(id_turno: 0) %></div>
               <div align="center"  class="title is-5 has-text-black is-active"><%= link_to "Ayuda", ayuda_path %></div>
+              <% if current_user %>
+                <div align="center"  class="title is-5 has-text-black is-active"><%= link_to "Reportar", reports_path %></div>
+              <% end %>
             <hr class="dropdown-divider">
               <% if current_user %>
                 <div align="center"  class="title is-5 has-text-black is-active has-text-center"><%= link_to "Cerrar sesion", destroy_user_session_path,  :method => :delete %></div>
