--- a/app/views/turnos/index.html.erb
+++ b/app/views/turnos/index.html.erb
@@ -12,30 +12,105 @@
             @usuario = 0
         end 
     %>
-
-    <div class="row">
-        <div class="row_second">
-            <div class="column_head_turno">
-                <% if @tipo_lista.to_i == 1 %>
-                    <h3 class = "title is-4" ><%= link_to "Confirmados", turnos_index_path(:tipo => 1, :tipo_lista => 2) %></h3>
-                    <h3 class = "title is-4 has-text-white" >Activos</h3>
-                    <h3 class = "title is-4" ><%= link_to "Completados", turnos_index_path(:tipo => 1, :tipo_lista => 3) %></h3>
-                <% elsif @tipo_lista.to_i == 2 %>
-                    <h3 class = "title is-4 has-text-white" >Confirmados</h3>
-                    <h3 class = "title is-4" ><%= link_to "Activos", turnos_index_path(:tipo => 1, :tipo_lista => 1) %></h3>
-                    <h3 class = "title is-4" ><%= link_to "Completados", turnos_index_path(:tipo => 1, :tipo_lista => 3) %></h3>
-                <% elsif @tipo_lista.to_i == 3 %>
-                    <h3 class = "title is-4" ><%= link_to "Confirmados", turnos_index_path(:tipo => 1, :tipo_lista => 2) %></h3>
-                    <h3 class = "title is-4" ><%= link_to "Activos", turnos_index_path(:tipo => 1, :tipo_lista => 1) %></h3>
-                    <h3 class = "title is-4 has-text-white" >Completados</h3>
-                <% else %>
-                    <h3 class = "title is-4" ><%= link_to "Confirmados", turnos_index_path(:tipo => 1, :tipo_lista => 2) %></h3>
-                    <h3 class = "title is-4" ><%= link_to "Activos", turnos_index_path(:tipo => 1, :tipo_lista => 1) %></h3>
-                    <h3 class = "title is-4" ><%= link_to "Completados", turnos_index_path(:tipo => 1, :tipo_lista => 3) %></h3>
-                <% end %>
+    <% if @usuario != 0 %>
+        <div class="row">
+            <div class="row_second">
+                <div class="column_head_turno">
+                    <% if @tipo_lista.to_i == 1 %>
+                        <h3 class = "title is-4" ><%= link_to "Confirmados", turnos_index_path(:tipo => 1, :tipo_lista => 2) %></h3>
+                        <h3 class = "title is-4 has-text-white" >Activos</h3>
+                        <h3 class = "title is-4" ><%= link_to "Completados", turnos_index_path(:tipo => 1, :tipo_lista => 3) %></h3>
+                    <% elsif @tipo_lista.to_i == 2 %>
+                        <h3 class = "title is-4 has-text-white" >Confirmados</h3>
+                        <h3 class = "title is-4" ><%= link_to "Activos", turnos_index_path(:tipo => 1, :tipo_lista => 1) %></h3>
+                        <h3 class = "title is-4" ><%= link_to "Completados", turnos_index_path(:tipo => 1, :tipo_lista => 3) %></h3>
+                    <% elsif @tipo_lista.to_i == 3 %>
+                        <h3 class = "title is-4" ><%= link_to "Confirmados", turnos_index_path(:tipo => 1, :tipo_lista => 2) %></h3>
+                        <h3 class = "title is-4" ><%= link_to "Activos", turnos_index_path(:tipo => 1, :tipo_lista => 1) %></h3>
+                        <h3 class = "title is-4 has-text-white" >Completados</h3>
+                    <% else %>
+                        <h3 class = "title is-4" ><%= link_to "Confirmados", turnos_index_path(:tipo => 1, :tipo_lista => 2) %></h3>
+                        <h3 class = "title is-4" ><%= link_to "Activos", turnos_index_path(:tipo => 1, :tipo_lista => 1) %></h3>
+                        <h3 class = "title is-4" ><%= link_to "Completados", turnos_index_path(:tipo => 1, :tipo_lista => 3) %></h3>
+                    <% end %>
+                </div>
             </div>
+            <% if @tipo_lista.to_i == 1 %>
+                <div class="row">
+                    <div class="row_inner">
+                        <div class="tile">
+                            <% @turnos.each do |turno|%>
+                                <%if turno.user_id != @usuario and turno.estado == "ACTIVO"%>
+                                    <div align='center' style="display: flex; flex-flow: wrap; ">
+                                        <div class="column-turno">
+                                            <b>Conductor </b><p><%= @users.find(turno.user_id).name%></p>
+                                            <b>Hora salida </b><p><%= turno.hora_salida%></p>
+                                            <b>Día de la semana </b><p><%= turno.dia_semana%></p>
+                                            <b>Dirección salida </b><p><%= turno.direccion_salida%></p>
+                                            <b>Dirección llegada </b><p><%= turno.direccion_llegada%></p>
+                                            <b></b><p><%= link_to 'Ver detalles', turnos_show_path(:id => turno.id) %></p>
+                                        </div>
+                                    </div>
+                                <% end %>
+                            <% end %>
+                        </div>
+                    </div>
+                </div>
+            
+            <% elsif @tipo_lista.to_i == 2 %>
+                <div class="row">
+                    <div class="row_inner">
+                        <div class="tile">
+                            <% @requests.each do |request|%>
+                                <%if request.user_id == @usuario %>
+                                    <% @turno = Turno.find(request.turno.id)%> 
+                                    <%if @turno.estado == "CONFIRMADO"%>
+                                        <div align='center' style="display: flex; flex-flow: wrap; ">
+                                            <div class="column-turno">
+                                                <% @user = User.find(@turno.user_id)%>
+                                                <b>Conductor </b><p><%= @users.find(@turno.user_id).name%></p>
+                                                <b>Hora salida </b><p><%= @turno.hora_salida%></p>
+                                                <b>Día de la semana </b><p><%= @turno.dia_semana%></p>
+                                                <b>Dirección salida </b><p><%= @turno.direccion_salida%></p>
+                                                <b>Dirección llegada </b><p><%= @turno.direccion_llegada%></p>
+                                                <b></b><p><%= link_to 'Ver detalles', turnos_show_path(:id => @turno.id) %></p>
+                                            </div>
+                                        </div>
+                                    <% end %>
+                                <% end %>
+                            <% end %>
+                        </div>
+                    </div>
+                </div>
+
+            <% elsif @tipo_lista.to_i == 3 %>
+                <div class="row">
+                    <div class="row_inner">
+                        <div class="tile">
+                            <% @requests.each do |request|%>
+                                <%if request.user_id == @usuario%>
+                                    <% @turno = Turno.find(request.turno.id)%> 
+                                    <%if @turno.estado == "COMPLETADO"%>
+                                        <div align='center' style="display: flex; flex-flow: wrap; ">
+                                            <div class="column-turno">
+                                                <b>Conductor </b><p><%= @users.find(@turno.user_id).name%></p>
+                                                <b>Hora salida </b><p><%= @turno.hora_salida%></p>
+                                                <b>Día de la semana </b><p><%= @turno.dia_semana%></p>
+                                                <b>Dirección salida </b><p><%= @turno.direccion_salida%></p>
+                                                <b>Dirección llegada </b><p><%= @turno.direccion_llegada%></p>
+                                                <b></b><p><%= link_to 'Ver detalles', turnos_show_path(:id => @turno.id) %></p>
+                                            </div>
+                                        </div>
+                                    <% end %>
+                                <% end %>
+                            <% end %>
+                        </div>
+                    </div>
+                </div>
+            <% end %>
         </div>
-        <% if @tipo_lista.to_i == 1 %>
+    <% else %>
+        <div class="row">
             <div class="row">
                 <div class="row_inner">
                     <div class="tile">
@@ -56,60 +131,8 @@
                     </div>
                 </div>
             </div>
-        
-        <% elsif @tipo_lista.to_i == 2 %>
-            <div class="row">
-                <div class="row_inner">
-                    <div class="tile">
-                        <% @requests.each do |request|%>
-                            <%if request.user_id == @usuario %>
-                                <% @turno = Turno.find(request.turno.id)%> 
-                                <%if @turno.estado == "CONFIRMADO"%>
-                                    <div align='center' style="display: flex; flex-flow: wrap; ">
-                                        <div class="column-turno">
-                                            <% @user = User.find(@turno.user_id)%>
-                                            <b>Conductor </b><p><%= @users.find(@turno.user_id).name%></p>
-                                            <b>Hora salida </b><p><%= @turno.hora_salida%></p>
-                                            <b>Día de la semana </b><p><%= @turno.dia_semana%></p>
-                                            <b>Dirección salida </b><p><%= @turno.direccion_salida%></p>
-                                            <b>Dirección llegada </b><p><%= @turno.direccion_llegada%></p>
-                                            <b></b><p><%= link_to 'Ver detalles', turnos_show_path(:id => @turno.id) %></p>
-                                        </div>
-                                    </div>
-                                <% end %>
-                            <% end %>
-                        <% end %>
-                    </div>
-                </div>
-            </div>
-
-        <% elsif @tipo_lista.to_i == 3 %>
-            <div class="row">
-                <div class="row_inner">
-                    <div class="tile">
-                        <% @requests.each do |request|%>
-                            <%if request.user_id == @usuario%>
-                                <% @turno = Turno.find(request.turno.id)%> 
-                                <%if @turno.estado == "COMPLETADO"%>
-                                    <div align='center' style="display: flex; flex-flow: wrap; ">
-                                        <div class="column-turno">
-                                            <b>Conductor </b><p><%= @users.find(@turno.user_id).name%></p>
-                                            <b>Hora salida </b><p><%= @turno.hora_salida%></p>
-                                            <b>Día de la semana </b><p><%= @turno.dia_semana%></p>
-                                            <b>Dirección salida </b><p><%= @turno.direccion_salida%></p>
-                                            <b>Dirección llegada </b><p><%= @turno.direccion_llegada%></p>
-                                            <b></b><p><%= link_to 'Ver detalles', turnos_show_path(:id => @turno.id) %></p>
-                                        </div>
-                                    </div>
-                                <% end %>
-                            <% end %>
-                        <% end %>
-                    </div>
-                </div>
-            </div>
-        <% end %>
-    </div>
-
+        </div>
+    <% end %>
 <% else %>
 
     <h1 align='center' class = "title is-2 has-text-primary" >Turnos</h1>
