--- a/app/views/users/registrations/show.html.erb
+++ b/app/views/users/registrations/show.html.erb
@@ -15,31 +15,31 @@
             <% if current_user.id == @user.id %>
                 <% if @tipo_lista.to_i == 1 %>
                     <h3 class = "title is-4 has-text-white" >Información</h3>
-                    <h3 class = "title is-4" ><%= link_to "Reseñas", users_show_path(:id => current_user.id, :tipo_lista => 2) %></h3>
-                    <h3 class = "title is-4" ><%= link_to "Reportes", users_show_path(:id => current_user.id, :tipo_lista => 3) %></h3>
+                    <h3 class = "title is-4" ><%= link_to "Reseñas", users_show_path(:id => @user.id, :tipo_lista => 2) %></h3>
+                    <h3 class = "title is-4" ><%= link_to "Reportes", users_show_path(:id => @user.id, :tipo_lista => 3) %></h3>
                 <% elsif @tipo_lista.to_i == 2 %>
-                    <h3 class = "title is-4" ><%= link_to "Información", users_show_path(:id => current_user.id, :tipo_lista => 1) %></h3>
+                    <h3 class = "title is-4" ><%= link_to "Información", users_show_path(:id => @user.id, :tipo_lista => 1) %></h3>
                     <h3 class = "title is-4 has-text-white" >Reseñas</h3>
-                    <h3 class = "title is-4" ><%= link_to "Reportes", users_show_path(:id => current_user.id, :tipo_lista => 3) %></h3>
+                    <h3 class = "title is-4" ><%= link_to "Reportes", users_show_path(:id => @user.id, :tipo_lista => 3) %></h3>
                 <% elsif @tipo_lista.to_i == 3 %>
-                    <h3 class = "title is-4" ><%= link_to "Información", users_show_path(:id => current_user.id, :tipo_lista => 1) %></h3>
-                    <h3 class = "title is-4" ><%= link_to "Reseñas", users_show_path(:id => current_user.id, :tipo_lista => 2) %></h3>
+                    <h3 class = "title is-4" ><%= link_to "Información", users_show_path(:id => @user.id, :tipo_lista => 1) %></h3>
+                    <h3 class = "title is-4" ><%= link_to "Reseñas", users_show_path(:id => @user.id, :tipo_lista => 2) %></h3>
                     <h3 class = "title is-4 has-text-white" >Reportes</h3>
                 <% else %>
-                    <h3 class = "title is-4" ><%= link_to "Información", users_show_path(:id => current_user.id, :tipo_lista => 1) %></h3>
-                    <h3 class = "title is-4" ><%= link_to "Reseñas", users_show_path(:id => current_user.id, :tipo_lista => 2) %></h3>
-                    <h3 class = "title is-4" ><%= link_to "Reportes", users_show_path(:id => current_user.id, :tipo_lista => 3) %></h3>
+                    <h3 class = "title is-4" ><%= link_to "Información", users_show_path(:id => @user.id, :tipo_lista => 1) %></h3>
+                    <h3 class = "title is-4" ><%= link_to "Reseñas", users_show_path(:id => @user.id, :tipo_lista => 2) %></h3>
+                    <h3 class = "title is-4" ><%= link_to "Reportes", users_show_path(:id => @user.id, :tipo_lista => 3) %></h3>
                 <% end %>
             <% else %>
                 <% if @tipo_lista.to_i == 1 %>
                     <h3 class = "title is-4 has-text-white" >Información</h3>
-                    <h3 class = "title is-4" ><%= link_to "Reseñas", users_show_path(:id => current_user.id, :tipo_lista => 2) %></h3>
+                    <h3 class = "title is-4" ><%= link_to "Reseñas", users_show_path(:id => @user.id, :tipo_lista => 2) %></h3>
                 <% elsif @tipo_lista.to_i == 2 %>
-                    <h3 class = "title is-4" ><%= link_to "Información", users_show_path(:id => current_user.id, :tipo_lista => 1) %></h3>
+                    <h3 class = "title is-4" ><%= link_to "Información", users_show_path(:id => @user.id, :tipo_lista => 1) %></h3>
                     <h3 class = "title is-4 has-text-white" >Reseñas</h3>
                 <% else %>
-                    <h3 class = "title is-4" ><%= link_to "Información", users_show_path(:id => current_user.id, :tipo_lista => 1) %></h3>
-                    <h3 class = "title is-4" ><%= link_to "Reseñas", users_show_path(:id => current_user.id, :tipo_lista => 2) %></h3>
+                    <h3 class = "title is-4" ><%= link_to "Información", users_show_path(:id => @user.id, :tipo_lista => 1) %></h3>
+                    <h3 class = "title is-4" ><%= link_to "Reseñas", users_show_path(:id => @user.id, :tipo_lista => 2) %></h3>
                 <% end %>
             <% end %>
         </div>
@@ -60,16 +60,20 @@
                 <%= @user.name %>
             </p>
             <br/>
-            <p>
-                <strong align='center' class = "title is-5 has-text-black">Email:</strong>
-                <%= @user.email %>
-            </p>
-            <br/>
-            <p>
-                <strong align='center' class = "title is-5 has-text-black">Dirección:</strong>
-                <%= @user.address %>
-            </p>
-            <br/>
+            <% if current_user.id == @user.id %>
+                <p>
+                    <strong align='center' class = "title is-5 has-text-black">Email:</strong>
+                    <%= @user.email %>
+                </p>
+                <br/>
+            <% end %>
+            <% if current_user.id == @user.id %>
+                <p>
+                    <strong align='center' class = "title is-5 has-text-black">Dirección:</strong>
+                    <%= @user.address %>
+                </p>
+                <br/>
+            <% end %>
             <p>
                 <strong align='center' class = "title is-5 has-text-black">Género:</strong>
                 <%= @user.gender %>
